pipeline/patch-demo-listener.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: el-patch-demo-listener
  labels:
    eventlistener: patch-demo-listener
spec:
  to:
    kind: Service
    name: el-patch-demo-listener
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
