pipeline/release-demo-listener.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: release-demo-listener-url
  namespace: tekton-demo
spec:
  to:
    kind: Service
    name: el-release-demo-listener 
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
